JC-BACK-Modify schema PUT User
